@@ -3,19 +3,21 @@ package com.reactive.preypredator.statistics;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
+/**
+ * Logs simulation statistics over time and writes to CSV
+ */
 public class DataLogger {
-    private List<Statistics> history;
+    private LinkedList<Statistics> history;
     private String outputFile;
     private boolean headerWritten = false;
-    private static boolean fileCleared = false; // Ensures clearing happens only once
+    private static boolean fileCleared = false;
 
     public DataLogger(String outputFile) {
-        this.history = new ArrayList<>();
+        this.history = new LinkedList<>();
         this.outputFile = outputFile;
-
-        // Clear the file at the first instantiation
         clearFile();
     }
 
@@ -25,7 +27,6 @@ public class DataLogger {
     private void clearFile() {
         if (!fileCleared) {
             try (FileWriter writer = new FileWriter(outputFile, false)) {
-                // Open in overwrite mode (false) to erase everything
                 writer.write("");
                 fileCleared = true;
                 System.out.println("[DataLogger] Cleared old simulation data from " + outputFile);
@@ -38,7 +39,7 @@ public class DataLogger {
     /**
      * Log a statistics snapshot and write to file
      */
-    public void log(Statistics stats) {
+    public synchronized void log(Statistics stats) {
         history.add(stats);
         writeToFile(stats);
     }
@@ -46,27 +47,21 @@ public class DataLogger {
     private void writeToFile(Statistics stats) {
         try (FileWriter writer = new FileWriter(outputFile, true)) {
             if (!headerWritten && history.size() == 1) {
-                writer.write("Tick,PreyCount,PredatorCount,AvgPreyEnergy,AvgPredatorEnergy,GrassCoverage\n");
+                writer.write(Statistics.getCSVHeader() + "\n");
                 headerWritten = true;
             }
-            writer.write(String.format("%d,%d,%d,%.2f,%.2f,%.4f\n",
-                    stats.getTick(),
-                    stats.getPreyCount(),
-                    stats.getPredatorCount(),
-                    stats.getAvgPreyEnergy(),
-                    stats.getAvgPredatorEnergy(),
-                    stats.getGrassCoverage()));
+            writer.write(stats.toCSV() + "\n");
         } catch (IOException e) {
             System.err.println("Error writing to CSV: " + e.getMessage());
         }
     }
 
-    public List<Statistics> getHistory() {
-        return new ArrayList<>(history);
+    public synchronized LinkedList<Statistics> getHistory() {
+        return new LinkedList<>(history);
     }
 
-    public Statistics getLatest() {
-        return history.isEmpty() ? null : history.get(history.size() - 1);
+    public synchronized Statistics getLatest() {
+        return history.isEmpty() ? null : history.getLast();
     }
 
     public void printSummary() {
@@ -75,8 +70,8 @@ public class DataLogger {
             return;
         }
 
-        Statistics first = history.get(0);
-        Statistics last = history.get(history.size() - 1);
+        Statistics first = history.getFirst();
+        Statistics last = history.getLast();
 
         System.out.println("\n=== Simulation Summary ===");
         System.out.println("Duration: " + last.getTick() + " ticks");
@@ -88,5 +83,9 @@ public class DataLogger {
 
     public String getOutputFile() {
         return outputFile;
+    }
+
+    public synchronized void clear() {
+        history.clear();
     }
 }
